--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -16,7 +16,6 @@ bSCSEditorShowFloor=False
 SCSViewportCameraSpeed=4
 AssetViewerProfileName=
 MaterialQualityLevel=1
-bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 GameGetsMouseControl=False
@@ -74,8 +73,10 @@ CurrentPosGridSize=0
 
 [MRU]
 MRUItem0=/Game/TopDownBP/Maps/TestMap
-MRUItem1=/Game/TopDownBP/Maps/TopDownExampleMap
-MRUItem2=/Game/TopDownBP/Maps/TopDownTest1
+MRUItem1=/Game/StarterContent/Maps/Minimal_Default
+MRUItem2=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem3=/Game/TopDownBP/Maps/TopDownExampleMap
+MRUItem4=/Game/TopDownBP/Maps/TopDownTest1
 
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
@@ -93,7 +94,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game/StarterContent
+ContentBrowserTab1.SelectedPaths=/Game/StarterContent/Audio
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 AssetDialog.ThumbnailSizeScale=0.100000
@@ -704,6 +705,7 @@ StaticMeshEditor.TimeStamp=2018.01.16-10.04.18
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Audio/Starter_Music_Cue.Starter_Music_Cue;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/TopDownBP/Blueprints/TopDownCharacter.TopDownCharacter;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1252,6 +1254,33 @@ StaticMesh.StaticMesh=True
 StaticMesh.Collision=True
 StaticMesh.ImportSettings=True
 StaticMesh.Navigation=True
+BP_LightStudio_C.TransformCommon=True
+BP_LightStudio_C.Global=True
+BP_LightStudio_C.HDRI=True
+BP_LightStudio_C.Sun=True
+BP_LightStudio_C.Atmosphere=True
+BP_LightStudio_C.Fog=True
+BP_LightStudio_C.SkyLight=True
+BP_LightStudio_C.LightShafts=True
+BP_LightStudio_C.Rendering=True
+BP_LightStudio_C.Input=True
+BP_LightStudio_C.Actor=True
+AmbientSound.TransformCommon=True
+AmbientSound.Sound=True
+AmbientSound.Attenuation=True
+AmbientSound.Modulation=True
+AmbientSound.AttenuationDistance=True
+AmbientSound.AttenuationSpatialization=True
+AmbientSound.Filter=True
+AmbientSound.AttenuationAirAbsorption=True
+AmbientSound.AttenuationListenerFocus=True
+AmbientSound.AttenuationOcclusion=True
+AmbientSound.Concurrency=True
+AmbientSound.Tags=True
+AmbientSound.Activation=True
+AmbientSound.Cooking=True
+AmbientSound.Rendering=True
+AmbientSound.Actor=True
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
