AI perception updated

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -89,7 +89,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSizeScale=0.180000
 ContentBrowserTab1.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/AI
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 
@@ -943,6 +943,224 @@ StaticMeshComponent.Lighting=True
 StaticMeshComponent.Rendering=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+PawnSensingComponent.Variable=True
+PawnSensingComponent.Sockets=True
+PawnSensingComponent.AI=True
+PawnSensingComponent.Tags=True
+PawnSensingComponent.ComponentReplication=True
+PawnSensingComponent.Cooking=True
+PawnSensingComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_CallFunction.Graph=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
+TargetPoint.TransformCommon=True
+TargetPoint.Sprite=True
+TargetPoint.Rendering=True
+TargetPoint.Tags=True
+TargetPoint.Cooking=True
+TargetPoint.Input=True
+TargetPoint.Actor=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.SkeletalMesh=True
+SkeletalMeshComponent.Optimization=True
+SkeletalMeshComponent.HLOD=True
+SkeletalMeshComponent.Mobile=True
+REINST_AI_Patroll_C_57.TransformCommon=True
+REINST_AI_Patroll_C_57.Animation=True
+REINST_AI_Patroll_C_57.Mesh=True
+REINST_AI_Patroll_C_57.Tick=True
+REINST_AI_Patroll_C_57.ComponentTick=True
+REINST_AI_Patroll_C_57.Clothing=True
+REINST_AI_Patroll_C_57.Physics=True
+REINST_AI_Patroll_C_57.ClothingSimulation=True
+REINST_AI_Patroll_C_57.Collision=True
+REINST_AI_Patroll_C_57.Lighting=True
+REINST_AI_Patroll_C_57.Rendering=True
+REINST_AI_Patroll_C_57.Tags=True
+REINST_AI_Patroll_C_57.ComponentReplication=True
+REINST_AI_Patroll_C_57.Activation=True
+REINST_AI_Patroll_C_57.Variable=True
+REINST_AI_Patroll_C_57.Cooking=True
+REINST_AI_Patroll_C_57.Character Movement: Jumping / Falling=True
+REINST_AI_Patroll_C_57.Character Movement (General Settings)=True
+REINST_AI_Patroll_C_57.Character Movement: Walking=True
+REINST_AI_Patroll_C_57.Character Movement: Swimming=True
+REINST_AI_Patroll_C_57.Character Movement: Flying=True
+REINST_AI_Patroll_C_57.Character Movement: Custom Movement=True
+REINST_AI_Patroll_C_57.Character Movement (Rotation Settings)=True
+REINST_AI_Patroll_C_57.Character Movement: Physics Interaction=True
+REINST_AI_Patroll_C_57.Character Movement (Networking)=True
+REINST_AI_Patroll_C_57.Character Movement=True
+REINST_AI_Patroll_C_57.Character Movement: Avoidance=True
+REINST_AI_Patroll_C_57.Character Movement: NavMesh Movement=True
+REINST_AI_Patroll_C_57.RootMotion=True
+REINST_AI_Patroll_C_57.NavMovement=True
+REINST_AI_Patroll_C_57.Velocity=True
+REINST_AI_Patroll_C_57.PlanarMovement=True
+REINST_AI_Patroll_C_57.MovementComponent=True
+REINST_AI_Patroll_C_57.Shape=True
+REINST_AI_Patroll_C_57.Navigation=True
+REINST_AI_Patroll_C_57.Character=True
+REINST_AI_Patroll_C_57.Camera=True
+REINST_AI_Patroll_C_57.Pawn=True
+REINST_AI_Patroll_C_57.Replication=True
+REINST_AI_Patroll_C_57.Input=True
+REINST_AI_Patroll_C_57.Actor=True
+REINST_AI_Patroll_C_63.TransformCommon=True
+REINST_AI_Patroll_C_63.Animation=True
+REINST_AI_Patroll_C_63.Mesh=True
+REINST_AI_Patroll_C_63.Tick=True
+REINST_AI_Patroll_C_63.ComponentTick=True
+REINST_AI_Patroll_C_63.Clothing=True
+REINST_AI_Patroll_C_63.Physics=True
+REINST_AI_Patroll_C_63.ClothingSimulation=True
+REINST_AI_Patroll_C_63.Collision=True
+REINST_AI_Patroll_C_63.Lighting=True
+REINST_AI_Patroll_C_63.Rendering=True
+REINST_AI_Patroll_C_63.Tags=True
+REINST_AI_Patroll_C_63.ComponentReplication=True
+REINST_AI_Patroll_C_63.Activation=True
+REINST_AI_Patroll_C_63.Variable=True
+REINST_AI_Patroll_C_63.Cooking=True
+REINST_AI_Patroll_C_63.Character Movement: Jumping / Falling=True
+REINST_AI_Patroll_C_63.Character Movement (General Settings)=True
+REINST_AI_Patroll_C_63.Character Movement: Walking=True
+REINST_AI_Patroll_C_63.Character Movement: Swimming=True
+REINST_AI_Patroll_C_63.Character Movement: Flying=True
+REINST_AI_Patroll_C_63.Character Movement: Custom Movement=True
+REINST_AI_Patroll_C_63.Character Movement (Rotation Settings)=True
+REINST_AI_Patroll_C_63.Character Movement: Physics Interaction=True
+REINST_AI_Patroll_C_63.Character Movement (Networking)=True
+REINST_AI_Patroll_C_63.Character Movement=True
+REINST_AI_Patroll_C_63.Character Movement: Avoidance=True
+REINST_AI_Patroll_C_63.Character Movement: NavMesh Movement=True
+REINST_AI_Patroll_C_63.RootMotion=True
+REINST_AI_Patroll_C_63.NavMovement=True
+REINST_AI_Patroll_C_63.Velocity=True
+REINST_AI_Patroll_C_63.PlanarMovement=True
+REINST_AI_Patroll_C_63.MovementComponent=True
+REINST_AI_Patroll_C_63.Shape=True
+REINST_AI_Patroll_C_63.Navigation=True
+REINST_AI_Patroll_C_63.Character=True
+REINST_AI_Patroll_C_63.Camera=True
+REINST_AI_Patroll_C_63.Pawn=True
+REINST_AI_Patroll_C_63.Replication=True
+REINST_AI_Patroll_C_63.Input=True
+REINST_AI_Patroll_C_63.Actor=True
+REINST_AI_Patroll_C_69.TransformCommon=True
+REINST_AI_Patroll_C_69.Animation=True
+REINST_AI_Patroll_C_69.Mesh=True
+REINST_AI_Patroll_C_69.Tick=True
+REINST_AI_Patroll_C_69.ComponentTick=True
+REINST_AI_Patroll_C_69.Clothing=True
+REINST_AI_Patroll_C_69.Physics=True
+REINST_AI_Patroll_C_69.ClothingSimulation=True
+REINST_AI_Patroll_C_69.Collision=True
+REINST_AI_Patroll_C_69.Lighting=True
+REINST_AI_Patroll_C_69.Rendering=True
+REINST_AI_Patroll_C_69.Tags=True
+REINST_AI_Patroll_C_69.ComponentReplication=True
+REINST_AI_Patroll_C_69.Activation=True
+REINST_AI_Patroll_C_69.Variable=True
+REINST_AI_Patroll_C_69.Cooking=True
+REINST_AI_Patroll_C_69.Character Movement: Jumping / Falling=True
+REINST_AI_Patroll_C_69.Character Movement (General Settings)=True
+REINST_AI_Patroll_C_69.Character Movement: Walking=True
+REINST_AI_Patroll_C_69.Character Movement: Swimming=True
+REINST_AI_Patroll_C_69.Character Movement: Flying=True
+REINST_AI_Patroll_C_69.Character Movement: Custom Movement=True
+REINST_AI_Patroll_C_69.Character Movement (Rotation Settings)=True
+REINST_AI_Patroll_C_69.Character Movement: Physics Interaction=True
+REINST_AI_Patroll_C_69.Character Movement (Networking)=True
+REINST_AI_Patroll_C_69.Character Movement=True
+REINST_AI_Patroll_C_69.Character Movement: Avoidance=True
+REINST_AI_Patroll_C_69.Character Movement: NavMesh Movement=True
+REINST_AI_Patroll_C_69.RootMotion=True
+REINST_AI_Patroll_C_69.NavMovement=True
+REINST_AI_Patroll_C_69.Velocity=True
+REINST_AI_Patroll_C_69.PlanarMovement=True
+REINST_AI_Patroll_C_69.MovementComponent=True
+REINST_AI_Patroll_C_69.Shape=True
+REINST_AI_Patroll_C_69.Navigation=True
+REINST_AI_Patroll_C_69.Character=True
+REINST_AI_Patroll_C_69.Camera=True
+REINST_AI_Patroll_C_69.Pawn=True
+REINST_AI_Patroll_C_69.Replication=True
+REINST_AI_Patroll_C_69.Input=True
+REINST_AI_Patroll_C_69.Actor=True
+REINST_AI_Patroll_C_75.TransformCommon=True
+REINST_AI_Patroll_C_75.Animation=True
+REINST_AI_Patroll_C_75.Mesh=True
+REINST_AI_Patroll_C_75.Tick=True
+REINST_AI_Patroll_C_75.ComponentTick=True
+REINST_AI_Patroll_C_75.Clothing=True
+REINST_AI_Patroll_C_75.Physics=True
+REINST_AI_Patroll_C_75.ClothingSimulation=True
+REINST_AI_Patroll_C_75.Collision=True
+REINST_AI_Patroll_C_75.Lighting=True
+REINST_AI_Patroll_C_75.Rendering=True
+REINST_AI_Patroll_C_75.Tags=True
+REINST_AI_Patroll_C_75.ComponentReplication=True
+REINST_AI_Patroll_C_75.Activation=True
+REINST_AI_Patroll_C_75.Variable=True
+REINST_AI_Patroll_C_75.Cooking=True
+REINST_AI_Patroll_C_75.Character Movement: Jumping / Falling=True
+REINST_AI_Patroll_C_75.Character Movement (General Settings)=True
+REINST_AI_Patroll_C_75.Character Movement: Walking=True
+REINST_AI_Patroll_C_75.Character Movement: Swimming=True
+REINST_AI_Patroll_C_75.Character Movement: Flying=True
+REINST_AI_Patroll_C_75.Character Movement: Custom Movement=True
+REINST_AI_Patroll_C_75.Character Movement (Rotation Settings)=True
+REINST_AI_Patroll_C_75.Character Movement: Physics Interaction=True
+REINST_AI_Patroll_C_75.Character Movement (Networking)=True
+REINST_AI_Patroll_C_75.Character Movement=True
+REINST_AI_Patroll_C_75.Character Movement: Avoidance=True
+REINST_AI_Patroll_C_75.Character Movement: NavMesh Movement=True
+REINST_AI_Patroll_C_75.RootMotion=True
+REINST_AI_Patroll_C_75.NavMovement=True
+REINST_AI_Patroll_C_75.Velocity=True
+REINST_AI_Patroll_C_75.PlanarMovement=True
+REINST_AI_Patroll_C_75.MovementComponent=True
+REINST_AI_Patroll_C_75.Shape=True
+REINST_AI_Patroll_C_75.Navigation=True
+REINST_AI_Patroll_C_75.Character=True
+REINST_AI_Patroll_C_75.Camera=True
+REINST_AI_Patroll_C_75.Pawn=True
+REINST_AI_Patroll_C_75.Replication=True
+REINST_AI_Patroll_C_75.Input=True
+REINST_AI_Patroll_C_75.Actor=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
@@ -961,11 +1179,23 @@ Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" "
-ActorComponent=
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
+SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/AI/AI_Patroll.AI_Patroll;
+RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
+
+[DetailCustomWidgetExpansion]
+SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.Rendering.TextureStreaming,SkeletalMeshComponent.Rendering.LOD,
+
+[DetailCategoriesAdvanced]
+NavMeshBoundsVolume.Collision=True
 
 
