AI speed adjusted

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -704,8 +704,8 @@ HierarchicalLODUtilities.TimeStamp=2018.01.16-12.00.59
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2018.01.19-15.37.10
 ExternalImagePicker.LastCompileMethod=Unknown
-SynthBenchmark.TimeStamp=2018.01.15-12.24.34
-SynthBenchmark.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2018.01.16-10.04.18
+SynthBenchmark.LastCompileMethod=External
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -1630,6 +1630,54 @@ MoveToNextPoint_C.Description=True
 MoveToNextPoint_C.Task=True
 MoveToNextPoint_C.Default=True
 AI_Character_Controller_C.Default=True
+REINST_AI_Character_C_46.Variable=True
+REINST_AI_Character_C_46.Sockets=True
+REINST_AI_Character_C_46.Character Movement: Jumping / Falling=True
+REINST_AI_Character_C_46.Character Movement (General Settings)=True
+REINST_AI_Character_C_46.Character Movement: Walking=True
+REINST_AI_Character_C_46.Character Movement: Swimming=True
+REINST_AI_Character_C_46.Character Movement: Flying=True
+REINST_AI_Character_C_46.Character Movement: Custom Movement=True
+REINST_AI_Character_C_46.Character Movement (Rotation Settings)=True
+REINST_AI_Character_C_46.Character Movement: Physics Interaction=True
+REINST_AI_Character_C_46.Character Movement (Networking)=True
+REINST_AI_Character_C_46.Character Movement=True
+REINST_AI_Character_C_46.Character Movement: Avoidance=True
+REINST_AI_Character_C_46.Character Movement: NavMesh Movement=True
+REINST_AI_Character_C_46.RootMotion=True
+REINST_AI_Character_C_46.NavMovement=True
+REINST_AI_Character_C_46.Velocity=True
+REINST_AI_Character_C_46.PlanarMovement=True
+REINST_AI_Character_C_46.MovementComponent=True
+REINST_AI_Character_C_46.Tags=True
+REINST_AI_Character_C_46.ComponentReplication=True
+REINST_AI_Character_C_46.Activation=True
+REINST_AI_Character_C_46.Cooking=True
+REINST_AI_Character_C_46.Events=True
+REINST_AI_Character_C_52.Variable=True
+REINST_AI_Character_C_52.Sockets=True
+REINST_AI_Character_C_52.Character Movement: Jumping / Falling=True
+REINST_AI_Character_C_52.Character Movement (General Settings)=True
+REINST_AI_Character_C_52.Character Movement: Walking=True
+REINST_AI_Character_C_52.Character Movement: Swimming=True
+REINST_AI_Character_C_52.Character Movement: Flying=True
+REINST_AI_Character_C_52.Character Movement: Custom Movement=True
+REINST_AI_Character_C_52.Character Movement (Rotation Settings)=True
+REINST_AI_Character_C_52.Character Movement: Physics Interaction=True
+REINST_AI_Character_C_52.Character Movement (Networking)=True
+REINST_AI_Character_C_52.Character Movement=True
+REINST_AI_Character_C_52.Character Movement: Avoidance=True
+REINST_AI_Character_C_52.Character Movement: NavMesh Movement=True
+REINST_AI_Character_C_52.RootMotion=True
+REINST_AI_Character_C_52.NavMovement=True
+REINST_AI_Character_C_52.Velocity=True
+REINST_AI_Character_C_52.PlanarMovement=True
+REINST_AI_Character_C_52.MovementComponent=True
+REINST_AI_Character_C_52.Tags=True
+REINST_AI_Character_C_52.ComponentReplication=True
+REINST_AI_Character_C_52.Activation=True
+REINST_AI_Character_C_52.Cooking=True
+REINST_AI_Character_C_52.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
@@ -1703,8 +1751,8 @@ REINST_AI_Character_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\
 REINST_AI_Character_C_115="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
 RecentlyPlaced=/Game/AI/AI_helper/PathNode.PathNode;
+RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/AI/AI_Patroll.AI_Patroll;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
