--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,6 +108,8 @@ ContentBrowserTab2.SelectedCollections=
 ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/TopDownBP/Maps/TopDownExampleMap
@@ -134,7 +136,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=../../../../../../Users/asus/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
@@ -1678,30 +1680,118 @@ REINST_AI_Character_C_52.ComponentReplication=True
 REINST_AI_Character_C_52.Activation=True
 REINST_AI_Character_C_52.Cooking=True
 REINST_AI_Character_C_52.Events=True
+Watchdog_AI_C.Tick=True
+Watchdog_AI_C.Character=True
+Watchdog_AI_C.Camera=True
+Watchdog_AI_C.Pawn=True
+Watchdog_AI_C.Rendering=True
+Watchdog_AI_C.Replication=True
+Watchdog_AI_C.Input=True
+Watchdog_AI_C.Actor=True
+Watchdog_AI_C.Variable=True
+Watchdog_AI_C.TransformCommon=True
+Watchdog_AI_C.Sockets=True
+Watchdog_AI_C.Animation=True
+Watchdog_AI_C.Mesh=True
+Watchdog_AI_C.Clothing=True
+Watchdog_AI_C.ClothingSimulation=True
+Watchdog_AI_C.Physics=True
+Watchdog_AI_C.Collision=True
+Watchdog_AI_C.Lighting=True
+Watchdog_AI_C.Tags=True
+Watchdog_AI_C.ComponentReplication=True
+Watchdog_AI_C.Activation=True
+Watchdog_AI_C.Cooking=True
+Watchdog_AI_C.Events=True
+Watchdog_AI_C.Materials=True
+FocusNode_C.Tick=True
+FocusNode_C.Rendering=True
+FocusNode_C.Replication=True
+FocusNode_C.Input=True
+FocusNode_C.Actor=True
+Watchdog_AI_C.ComponentTick=True
+Watchdog_AI_C.Character Movement: Jumping / Falling=True
+Watchdog_AI_C.Character Movement (General Settings)=True
+Watchdog_AI_C.Character Movement: Walking=True
+Watchdog_AI_C.Character Movement: Swimming=True
+Watchdog_AI_C.Character Movement: Flying=True
+Watchdog_AI_C.Character Movement: Custom Movement=True
+Watchdog_AI_C.Character Movement (Rotation Settings)=True
+Watchdog_AI_C.Character Movement: Physics Interaction=True
+Watchdog_AI_C.Character Movement (Networking)=True
+Watchdog_AI_C.Character Movement=True
+Watchdog_AI_C.Character Movement: Avoidance=True
+Watchdog_AI_C.Character Movement: NavMesh Movement=True
+Watchdog_AI_C.RootMotion=True
+Watchdog_AI_C.NavMovement=True
+Watchdog_AI_C.Velocity=True
+Watchdog_AI_C.PlanarMovement=True
+Watchdog_AI_C.MovementComponent=True
+Watchdog_AI_C.Shape=True
+Watchdog_AI_C.Navigation=True
+Watchdog_AI_Controller_C.Tick=True
+Watchdog_AI_Controller_C.AI=True
+Watchdog_AI_Controller_C.Controller=True
+Watchdog_AI_Controller_C.Replication=True
+Watchdog_AI_Controller_C.Input=True
+Watchdog_AI_Controller_C.Actor=True
+REINST_Watchdog_AI_C_63.Tick=True
+REINST_Watchdog_AI_C_63.Character=True
+REINST_Watchdog_AI_C_63.Camera=True
+REINST_Watchdog_AI_C_63.Pawn=True
+REINST_Watchdog_AI_C_63.Rendering=True
+REINST_Watchdog_AI_C_63.Replication=True
+REINST_Watchdog_AI_C_63.Input=True
+REINST_Watchdog_AI_C_63.Actor=True
+Watchdog_AI_Controller_C.ComponentTick=True
+Watchdog_AI_Controller_C.Tags=True
+Watchdog_AI_Controller_C.ComponentReplication=True
+Watchdog_AI_Controller_C.Activation=True
+Watchdog_AI_Controller_C.Variable=True
+Watchdog_AI_Controller_C.Cooking=True
+FocusOnNextPoint_C.Description=True
+FocusOnNextPoint_C.Task=True
+Watchdog_AI_C.Default=True
+FocusNode_C.TransformCommon=True
+FocusNode_C.Default=True
+REINST_Watchdog_AI_C_143.Tick=True
+REINST_Watchdog_AI_C_143.Character=True
+REINST_Watchdog_AI_C_143.Camera=True
+REINST_Watchdog_AI_C_143.Pawn=True
+REINST_Watchdog_AI_C_143.Rendering=True
+REINST_Watchdog_AI_C_143.Replication=True
+REINST_Watchdog_AI_C_143.Input=True
+REINST_Watchdog_AI_C_143.Actor=True
+FocusOnNextPoint_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
 /Game/AI/AI_Character_Controller.AI_Character_Controller=0
-/Game/AI/AI_Patroll_Behaviour.AI_Patroll_Behaviour=1
-/Game/AI/AI_Patroll_Blackboard.AI_Patroll_Blackboard=1
+/Game/AI/AI_Patroll_Behaviour.AI_Patroll_Behaviour=0
+/Game/AI/AI_Patroll_Blackboard.AI_Patroll_Blackboard=0
 /Game/AI/Tasks/Find_Random_Location.Find_Random_Location=1
 /Game/AI/Tasks/Move_Near_Player.Move_Near_Player=1
-/Game/AI/Tasks/Focus_On_Player.Focus_On_Player=1
+/Game/AI/Tasks/Focus_On_Player.Focus_On_Player=0
 /Game/AI/Tasks/Stop_Focus_On_Player.Stop_Focus_On_Player=1
-/Game/AI/AI_helper/PathNode.PathNode=1
+/Game/AI/AI_helper/PathNode.PathNode=0
 /Game/AI/AI_Patrol.AI_Patrol=1
 /Game/AI/AI_Character.AI_Character=0
-/Game/AI/Tasks/MoveToNextPoint.MoveToNextPoint=1
+/Game/AI/Tasks/MoveToNextPoint.MoveToNextPoint=0
+/Game/AI/Watchdog_AI.Watchdog_AI=0
+/Game/AI/AI_Helper/FocusNode.FocusNode=1
+/Game/AI/Watchdog_AI_Controller.Watchdog_AI_Controller=0
+/Game/AI/Tasks/FocusOnNextPoint.FocusOnNextPoint=0
+/Game/AI/Watchdog_AI_Behaviour.Watchdog_AI_Behaviour=0
 
 [DetailPropertyExpansion]
-BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[3].KeyType\" "
-DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[3].KeyType\" "
+BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
+DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 Object=
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1]\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[1].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -1751,6 +1841,8 @@ REINST_AI_Character_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\
 REINST_AI_Character_C_115="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/AI/AI_Helper/FocusNode.FocusNode;
+RecentlyPlaced=/Game/AI/Watchdog_AI.Watchdog_AI;
 RecentlyPlaced=/Game/AI/AI_helper/PathNode.PathNode;
 RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
@@ -1817,5 +1909,20 @@ AI_Patroll_C=AI_Patroll_C.Physics.ConstraintsGroup,AI_Patroll_C.Rendering.Textur
 
 [DetailCategoriesAdvanced]
 NavMeshBoundsVolume.Collision=True
+
+[/Script/UnrealEd.EditorLoadingSavingSettings]
+AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
+bForceCompilationAtStartup=False
+bRestoreOpenAssetTabsOnRestart=False
+bEnableSourceControlCompatabilityCheck=False
+bMonitorContentDirectories=True
+AutoReimportThreshold=3.000000
+bAutoCreateAssets=True
+bAutoDeleteAssets=True
+bDetectChangesOnStartup=True
+bPromptBeforeAutoImporting=True
+bDeleteSourceFilesWithAssets=False
+bAutomaticallyCheckoutOnAssetModification=False
+bSCCUseGlobalSettings=False
 
 
