--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -136,7 +136,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/asus/Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
+UNR=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/TopDownBP/Maps
 BRUSH=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBX=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
 FBXAnim=F:/My Documents/Unreal Projects/Group-D-Ass2-Game/ProjectEspionage/Content/
@@ -1841,10 +1841,10 @@ REINST_AI_Character_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\
 REINST_AI_Character_C_115="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [PlacementMode]
-RecentlyPlaced=/Game/AI/AI_Helper/FocusNode.FocusNode;
-RecentlyPlaced=/Game/AI/Watchdog_AI.Watchdog_AI;
 RecentlyPlaced=/Game/AI/AI_helper/PathNode.PathNode;
 RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
+RecentlyPlaced=/Game/AI/AI_Helper/FocusNode.FocusNode;
+RecentlyPlaced=/Game/AI/Watchdog_AI.Watchdog_AI;
 RecentlyPlaced=/Script/Engine.TargetPoint;/Engine/Transient.ActorFactoryTargetPoint_0
 RecentlyPlaced=/Game/AI/AI_Patroll.AI_Patroll;
 RecentlyPlaced=/Script/Engine.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_14
