Security camera mechanics

--- a/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/ProjectEspionage/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -710,7 +710,7 @@ SynthBenchmark.TimeStamp=2018.01.16-10.04.18
 SynthBenchmark.LastCompileMethod=External
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1763,6 +1763,215 @@ REINST_Watchdog_AI_C_143.Replication=True
 REINST_Watchdog_AI_C_143.Input=True
 REINST_Watchdog_AI_C_143.Actor=True
 FocusOnNextPoint_C.Default=True
+Focus_Points_C.Tick=True
+Focus_Points_C.Rendering=True
+Focus_Points_C.Replication=True
+Focus_Points_C.Input=True
+Focus_Points_C.Actor=True
+Security_Camera_C.Tick=True
+Security_Camera_C.Character=True
+Security_Camera_C.Camera=True
+Security_Camera_C.Pawn=True
+Security_Camera_C.Rendering=True
+Security_Camera_C.Replication=True
+Security_Camera_C.Input=True
+Security_Camera_C.Actor=True
+Security_Camera_C.Variable=True
+Security_Camera_C.TransformCommon=True
+Security_Camera_C.Sockets=True
+Security_Camera_C.Animation=True
+Security_Camera_C.Mesh=True
+Security_Camera_C.Clothing=True
+Security_Camera_C.ClothingSimulation=True
+Security_Camera_C.Physics=True
+Security_Camera_C.Collision=True
+Security_Camera_C.Lighting=True
+Security_Camera_C.Tags=True
+Security_Camera_C.ComponentReplication=True
+Security_Camera_C.Activation=True
+Security_Camera_C.Cooking=True
+Security_Camera_C.Events=True
+Security_Camera_C.Materials=True
+REINST_Security_Camera_C_70.Variable=True
+REINST_Security_Camera_C_70.TransformCommon=True
+REINST_Security_Camera_C_70.Sockets=True
+REINST_Security_Camera_C_70.Animation=True
+REINST_Security_Camera_C_70.Mesh=True
+REINST_Security_Camera_C_70.Materials=True
+REINST_Security_Camera_C_70.Clothing=True
+REINST_Security_Camera_C_70.ClothingSimulation=True
+REINST_Security_Camera_C_70.Physics=True
+REINST_Security_Camera_C_70.Collision=True
+REINST_Security_Camera_C_70.Lighting=True
+REINST_Security_Camera_C_70.Rendering=True
+REINST_Security_Camera_C_70.Tags=True
+REINST_Security_Camera_C_70.ComponentReplication=True
+REINST_Security_Camera_C_70.Activation=True
+REINST_Security_Camera_C_70.Cooking=True
+REINST_Security_Camera_C_70.Events=True
+Security_Camera_C.Default=True
+Security_Camera_C.Character Movement: Jumping / Falling=True
+Security_Camera_C.Character Movement (General Settings)=True
+Security_Camera_C.Character Movement: Walking=True
+Security_Camera_C.Character Movement: Swimming=True
+Security_Camera_C.Character Movement: Flying=True
+Security_Camera_C.Character Movement: Custom Movement=True
+Security_Camera_C.Character Movement (Rotation Settings)=True
+Security_Camera_C.Character Movement: Physics Interaction=True
+Security_Camera_C.Character Movement (Networking)=True
+Security_Camera_C.Character Movement=True
+Security_Camera_C.Character Movement: Avoidance=True
+Security_Camera_C.Character Movement: NavMesh Movement=True
+Security_Camera_C.RootMotion=True
+Security_Camera_C.NavMovement=True
+Security_Camera_C.Velocity=True
+Security_Camera_C.PlanarMovement=True
+Security_Camera_C.MovementComponent=True
+Security_Camera_C.Shape=True
+Security_Camera_C.Navigation=True
+Focus_Points_C.TransformCommon=True
+Focus_Points_C.Default=True
+REINST_Security_Camera_C_118.Tick=True
+REINST_Security_Camera_C_118.Character=True
+REINST_Security_Camera_C_118.Camera=True
+REINST_Security_Camera_C_118.Pawn=True
+REINST_Security_Camera_C_118.Rendering=True
+REINST_Security_Camera_C_118.Replication=True
+REINST_Security_Camera_C_118.Input=True
+REINST_Security_Camera_C_118.Actor=True
+REINST_Security_Camera_C_134.Tick=True
+REINST_Security_Camera_C_134.Character=True
+REINST_Security_Camera_C_134.Camera=True
+REINST_Security_Camera_C_134.Pawn=True
+REINST_Security_Camera_C_134.Rendering=True
+REINST_Security_Camera_C_134.Replication=True
+REINST_Security_Camera_C_134.Input=True
+REINST_Security_Camera_C_134.Actor=True
+REINST_Security_Camera_C_148.Tick=True
+REINST_Security_Camera_C_148.Character=True
+REINST_Security_Camera_C_148.Camera=True
+REINST_Security_Camera_C_148.Pawn=True
+REINST_Security_Camera_C_148.Rendering=True
+REINST_Security_Camera_C_148.Replication=True
+REINST_Security_Camera_C_148.Input=True
+REINST_Security_Camera_C_148.Actor=True
+REINST_Security_Camera_C_152.Tick=True
+REINST_Security_Camera_C_152.Character=True
+REINST_Security_Camera_C_152.Camera=True
+REINST_Security_Camera_C_152.Pawn=True
+REINST_Security_Camera_C_152.Rendering=True
+REINST_Security_Camera_C_152.Replication=True
+REINST_Security_Camera_C_152.Input=True
+REINST_Security_Camera_C_152.Actor=True
+REINST_Security_Camera_C_160.Tick=True
+REINST_Security_Camera_C_160.Character=True
+REINST_Security_Camera_C_160.Camera=True
+REINST_Security_Camera_C_160.Pawn=True
+REINST_Security_Camera_C_160.Rendering=True
+REINST_Security_Camera_C_160.Replication=True
+REINST_Security_Camera_C_160.Input=True
+REINST_Security_Camera_C_160.Actor=True
+REINST_Security_Camera_C_168.Tick=True
+REINST_Security_Camera_C_168.Character=True
+REINST_Security_Camera_C_168.Camera=True
+REINST_Security_Camera_C_168.Pawn=True
+REINST_Security_Camera_C_168.Rendering=True
+REINST_Security_Camera_C_168.Replication=True
+REINST_Security_Camera_C_168.Input=True
+REINST_Security_Camera_C_168.Actor=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+K2Node_Timeline.GraphNodeDetail=True
+REINST_Security_Camera_C_184.Tick=True
+REINST_Security_Camera_C_184.Character=True
+REINST_Security_Camera_C_184.Camera=True
+REINST_Security_Camera_C_184.Pawn=True
+REINST_Security_Camera_C_184.Rendering=True
+REINST_Security_Camera_C_184.Replication=True
+REINST_Security_Camera_C_184.Input=True
+REINST_Security_Camera_C_184.Actor=True
+REINST_Security_Camera_C_208.Tick=True
+REINST_Security_Camera_C_208.Character=True
+REINST_Security_Camera_C_208.Camera=True
+REINST_Security_Camera_C_208.Pawn=True
+REINST_Security_Camera_C_208.Rendering=True
+REINST_Security_Camera_C_208.Replication=True
+REINST_Security_Camera_C_208.Input=True
+REINST_Security_Camera_C_208.Actor=True
+REINST_Security_Camera_C_212.TransformCommon=True
+REINST_Security_Camera_C_212.Animation=True
+REINST_Security_Camera_C_212.Mesh=True
+REINST_Security_Camera_C_212.None=True
+REINST_Security_Camera_C_212.Physics=True
+REINST_Security_Camera_C_212.Clothing=True
+REINST_Security_Camera_C_212.Collision=True
+REINST_Security_Camera_C_212.Lighting=True
+REINST_Security_Camera_C_212.ClothingSimulation=True
+REINST_Security_Camera_C_212.Rendering=True
+REINST_Security_Camera_C_212.Tags=True
+REINST_Security_Camera_C_212.Activation=True
+REINST_Security_Camera_C_212.Cooking=True
+REINST_Security_Camera_C_212.Character Movement: Jumping / Falling=True
+REINST_Security_Camera_C_212.Character Movement (General Settings)=True
+REINST_Security_Camera_C_212.Character Movement: Walking=True
+REINST_Security_Camera_C_212.Character Movement: Swimming=True
+REINST_Security_Camera_C_212.Character Movement: Flying=True
+REINST_Security_Camera_C_212.Character Movement: Custom Movement=True
+REINST_Security_Camera_C_212.Character Movement (Rotation Settings)=True
+REINST_Security_Camera_C_212.Character Movement: Physics Interaction=True
+REINST_Security_Camera_C_212.Character Movement (Networking)=True
+REINST_Security_Camera_C_212.Character Movement=True
+REINST_Security_Camera_C_212.Character Movement: Avoidance=True
+REINST_Security_Camera_C_212.Character Movement: NavMesh Movement=True
+REINST_Security_Camera_C_212.RootMotion=True
+REINST_Security_Camera_C_212.NavMovement=True
+REINST_Security_Camera_C_212.Velocity=True
+REINST_Security_Camera_C_212.PlanarMovement=True
+REINST_Security_Camera_C_212.MovementComponent=True
+REINST_Security_Camera_C_212.Shape=True
+REINST_Security_Camera_C_212.Navigation=True
+REINST_Security_Camera_C_212.Character=True
+REINST_Security_Camera_C_212.Camera=True
+REINST_Security_Camera_C_212.Pawn=True
+REINST_Security_Camera_C_212.Input=True
+REINST_Security_Camera_C_212.Actor=True
+REINST_Security_Camera_C_212.Tick=True
+REINST_Security_Camera_C_212.Replication=True
+REINST_Security_Camera_C_216.Tick=True
+REINST_Security_Camera_C_216.Character=True
+REINST_Security_Camera_C_216.Camera=True
+REINST_Security_Camera_C_216.Pawn=True
+REINST_Security_Camera_C_216.Rendering=True
+REINST_Security_Camera_C_216.Replication=True
+REINST_Security_Camera_C_216.Input=True
+REINST_Security_Camera_C_216.Actor=True
+REINST_Security_Camera_C_220.Tick=True
+REINST_Security_Camera_C_220.Character=True
+REINST_Security_Camera_C_220.Camera=True
+REINST_Security_Camera_C_220.Pawn=True
+REINST_Security_Camera_C_220.Rendering=True
+REINST_Security_Camera_C_220.Replication=True
+REINST_Security_Camera_C_220.Input=True
+REINST_Security_Camera_C_220.Actor=True
+REINST_Security_Camera_C_224.Tick=True
+REINST_Security_Camera_C_224.Character=True
+REINST_Security_Camera_C_224.Camera=True
+REINST_Security_Camera_C_224.Pawn=True
+REINST_Security_Camera_C_224.Rendering=True
+REINST_Security_Camera_C_224.Replication=True
+REINST_Security_Camera_C_224.Input=True
+REINST_Security_Camera_C_224.Actor=True
+REINST_Security_Camera_C_228.Tick=True
+REINST_Security_Camera_C_228.Character=True
+REINST_Security_Camera_C_228.Camera=True
+REINST_Security_Camera_C_228.Pawn=True
+REINST_Security_Camera_C_228.Rendering=True
+REINST_Security_Camera_C_228.Replication=True
+REINST_Security_Camera_C_228.Input=True
+REINST_Security_Camera_C_228.Actor=True
 
 [AssetEditorToolkitTabLocation]
 /Game/AI/AI_Patroll.AI_Patroll=1
@@ -1782,16 +1991,18 @@ FocusOnNextPoint_C.Default=True
 /Game/AI/Watchdog_AI_Controller.Watchdog_AI_Controller=0
 /Game/AI/Tasks/FocusOnNextPoint.FocusOnNextPoint=0
 /Game/AI/Watchdog_AI_Behaviour.Watchdog_AI_Behaviour=0
+/Game/AI/Security_Camera/Focus_Points.Focus_Points=1
+/Game/AI/Security_Camera/Security_Camera.Security_Camera=1
 
 [DetailPropertyExpansion]
 BlackboardData="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
 DataAsset="\"Object.Blackboard\" \"Object.Blackboard.Keys.Keys[0].KeyType\" "
-Object=
+Object="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.Tags.ComponentTags\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense.DetectionByAffiliation\" \"Object.Tags.ComponentTags\" "
+AIPerceptionComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object.AI Perception.SensesConfig\" \"Object.AI Perception.SensesConfig.SensesConfig[0]\" \"Object.AI Perception.SensesConfig.SensesConfig[0].Object.Sense\" \"Object.Tags.ComponentTags\" "
 SkeletalMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 SkinnedMeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
 MeshComponent="\"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Tags.ComponentTags\" "
@@ -1841,6 +2052,8 @@ REINST_AI_Character_C_91="\"Object.Character.Mesh.Object.Collision.BodyInstance\
 REINST_AI_Character_C_115="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CharacterMovement.Object.Character Movement: Walking.CurrentFloor\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/AI/Security_Camera/Focus_Points.Focus_Points;
+RecentlyPlaced=/Game/AI/Security_Camera/Security_Camera.Security_Camera;
 RecentlyPlaced=/Game/AI/AI_helper/PathNode.PathNode;
 RecentlyPlaced=/Game/AI/AI_Character.AI_Character;
 RecentlyPlaced=/Game/AI/AI_Helper/FocusNode.FocusNode;
@@ -1909,6 +2122,7 @@ AI_Patroll_C=AI_Patroll_C.Physics.ConstraintsGroup,AI_Patroll_C.Rendering.Textur
 
 [DetailCategoriesAdvanced]
 NavMeshBoundsVolume.Collision=True
+ObjectProperty.Variable=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
